@@ -1,37 +1,0 @@
-<?php
-/**
- * Lightbox Album module for phpGedView
- *
- * Display flv video media Items using JW Player in PGV Lightbox
- *
- * phpGedView: Genealogy Viewer
- * Copyright (C) 2007 to 2008  PGV Development Team.  All rights reserved.
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- *
- * @package PhpGedView
- * @subpackage Module
- * @version $Id$
- * @author Brian Holland
- */
-// ============================================================
-require './config.php';
- 
-require_once 'includes/controllers/individual_ctrl.php'; 
-$controller = new IndividualController(); 
-$controller->init(); 
-
-include ('modules/lightbox/JWplayer/flvVideo.php');
-?>
